# yolov5_rknn

./: .gitignore  CMakeLists.txt  push_to_rk3588.sh  test.py
include/: postprocess.h
onnx2rknn/: export.py
src/: main.cc  postprocess.cc
